--- a/i3blocks/config
+++ b/i3blocks/config
@@ -1,168 +1,62 @@
-# i3blocks config file
-#
-# Please see man i3blocks for a complete reference!
-# The man page is also hosted at http://vivien.github.io/i3blocks
-#
-# List of valid properties:
-#
-# align
-# color
-# command
-# full_text
-# instance
-# interval
-# label
-# min_width
-# name
-# separator
-# separator_block_width
-# short_text
-# signal
-# urgent
-
-# Global properties
-#
-# The top properties below are applied to every block, but can be overridden.
-# Each block command defaults to the script name to avoid boilerplate.
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=7
 markup=none
 
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
 [cpu_usage]
-color=#2fdcb6
+color=#c27142
 label=
 interval=10
 separator=false
 
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
 [memory]
 label=
 separator=false
 interval=30
-color=#97d01a
+color=#c2aa81
 
 [memory]
 label=
 instance=swap
 separator=false
 interval=30
-color=#97d01a
+color=#7b4faa
 
-# Disk usage
-#
-# The directory defaults to $HOME if the instance is not specified.
-# The script may be called with a optional argument to set the alert
-# (defaults to 10 for 10%).
 [disk]
 label=
-#instance=/mnt/data
 interval=180
-color=#16b1fb
-
-# Network interface monitoring
-#
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-# [iface]
-#instance=wlan0
-# color=#00FF00
-# interval=10
-# separator=false
-
-# [wifi]
-#instance=wlp3s0
-# interval=10
-# separator=false
+color=#a143a6
 
 [bandwidth]
-#instance=eth0
-label=
 interval=5
-color=#0fdcb6
+color=#aa318b
 
-#[load_average]
-#interval=10
-
-# Battery indicator
-#
-# The battery instance defaults to 0.
 [battery]
 label=
 instance=0
-color=#FFFF00
+color=#aa2863
 interval=30
 
-# Brightness indicator
-#
 [brightness]
 label=
 command=/usr/share/i3blocks/brightness
-color=#55FFAA
+color=#c7c7c5
 interval=2
 signal=1
 
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
 [volume]
 label=♪
 command=/usr/share/i3blocks/volume default pulse
-color=#00FFAA
+color=#595753
 interval=2
 signal=1
 
-# Date Time
-#
 [time]
 label=
 command=date '+%Y-%m-%d %H:%M'
 interval=5
-color=#d81765
+color=#c27142
 
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
 
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
 
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
 
-# Key indicators
-#
-# Add the following bindings to i3 config file:
-#
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
 
-#[keyindicator]
-#instance=NUM
-#interval=once
-#signal=11
