--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -1,7 +1,7 @@
 visualizer_fifo_path = "/tmp/mpd.fifo"
 visualizer_output_name = visualizador
 visualizer_sync_interval = "20"
-visualizer_look = +|
+visualizer_look = |+
 mpd_music_dir = ~/Music
 autocenter_mode = yes
 user_interface = alternative
