--- a/rofi/config
+++ b/rofi/config
@@ -1,2 +1,27 @@
-# Dark theme.
-rofi.theme: ~/.cache/wal/colors-rofi-dark.rasi
+rofi.modi:                           window,run,ssh
+rofi.width:                          50
+rofi.lines:                          15
+rofi.columns:                        1
+rofi.font:                           roboto mono 10
+rofi.color-normal:                   #0a121c, #fff5da, #0a121c, #cb6d32, #fff5da
+rofi.color-urgent:                   #0a121c, #d6b48d, #22231D, #d6b48d, #fff5da
+rofi.color-active:                   #0a121c, #cf8763, #0a121c, #cf8763, #0a121c
+rofi.color-window:                   #0a121c, #cb6d32, #8b4b22
+rofi.bw:                             5
+rofi.location:                       0
+rofi.padding:                        5
+rofi.yoffset:                        0
+rofi.xoffset:                        0
+rofi.fixed-num-lines:                true
+rofi.terminal:                       rofi-sensible-terminal
+rofi.ssh-client:                     ssh
+rofi.ssh-command:                    {terminal} -e {ssh-client} {host}
+rofi.run-command:                    {cmd}
+rofi.parse-hosts:                    true
+rofi.matching:                       normal
+rofi.separator-style:                none
+rofi.scrollbar-width:                0
+rofi.kb-mode-next:                   Shift+Right,Control+Tab,Alt+l
+rofi.kb-mode-previous:               Shift+Left,Control+Shift+Tab,Alt+h
+rofi.kb-row-up:                      Up,Control+p,Shift+Tab,Shift+ISO_Left_Tab,Alt+k
+rofi.kb-row-down:                    Down,Control+n,Alt+j
