--- a/i3/config
+++ b/i3/config
@@ -4,16 +4,19 @@
 
 set $mod Mod4
 set $term rxvt-unicode
-set $coloract "#cb6d32"
-set $colorin "#8b4b22"
+set $coloract "#363d4e"
+set $colorin "#252a35"
 set_from_resource $fg i3wm.color7 #f0f0f0
 set_from_resource $bg i3wm.color0 #f0f0f0
-set_from_resource $color15 i3wm.color15 "#fff5da"
-set_from_resource $split i3wm.color10 "#986a60"
-set_from_resource $coloru i3wm.color2 "#6C5854"
+set_from_resource $color15 i3wm.color15 "#fefefe"
+set_from_resource $split i3wm.color10 "#747474"
+set_from_resource $coloru i3wm.color2 "#5c5c5c"
 set_from_resource $color1 i3wm.color2 #f0f0f0
-set_from_resource $color0 i3wm.color0 "#0a121c"
-set_from_resource $color8 i3wm.color8 "#14243a"
+set_from_resource $color3 i3wm.color3 "#d1ad91"
+set_from_resource $color4 i3wm.color4 "#3e5c8b"
+set_from_resource $color5 i3wm.color5 "#3c4048"
+set_from_resource $color0 i3wm.color0 "#141414"
+set_from_resource $color8 i3wm.color8 "#282828"
 
 # class                 border  backgr. text indicator child_border
 client.focused          $color1     $bg     $fg  $color1       $color1
@@ -91,16 +94,16 @@ bindsym $mod+a focus parent
 # focus the child container
 bindsym $mod+Shift+a focus child
 
-set $ws1  " "
-set $ws2  " "
-set $ws3  " "
-set $ws4  " "
-set $ws5  ""
-set $ws6  " "
-set $ws7  " "
-set $ws8  ""
-set $ws9  " "
-set $ws10  " "
+set $ws1  "  "
+set $ws2  "  "
+set $ws3  "  "
+set $ws4  "  "
+set $ws5  "  "
+set $ws6  "  "
+set $ws7  "  "
+set $ws8  "  "
+set $ws9  "  "
+set $ws10  "  "
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -278,7 +281,7 @@ bar {
             separator          $bg
 
             #                          BORDER       BACKGROUND   TEXT
-            focused_workspace  $bg $bg $color1
+            focused_workspace  $color4 $bg $color1
             inactive_workspace $bg $bg $white
             active_workspace   $transparent $transparent $color1
             urgent_workspace   $fg     $color1     $bg
@@ -286,11 +289,10 @@ bar {
             }
         }
 
+exec --no-startup-id wal -R -a 85
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg 
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
-exec --no-startup-id wal -R -o ~/dotfiles/scripts/reload_dunst.sh
 exec --no-startup-id nm-applet
 exec --no-startup-id pulseaudio --start
 exec --no-startup-id compton -bfcz
 exec --no-startup-id redshift
-exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg
-exec --no-startup-id ~/.config/wpg/wp_init.sh
