--- a/rofi/config
+++ b/rofi/config
@@ -3,10 +3,10 @@ rofi.width:                          50
 rofi.lines:                          15
 rofi.columns:                        1
 rofi.font:                           roboto mono 10
-rofi.color-normal:                   #0a121c, #fff5da, #0a121c, #cb6d32, #fff5da
-rofi.color-urgent:                   #0a121c, #d6b48d, #22231D, #d6b48d, #fff5da
-rofi.color-active:                   #0a121c, #cf8763, #0a121c, #cf8763, #0a121c
-rofi.color-window:                   #0a121c, #cb6d32, #8b4b22
+rofi.color-normal:                   #141414, #fefefe, #141414, #363d4e, #fefefe
+rofi.color-urgent:                   #141414, #d6b48d, #22231D, #d6b48d, #fefefe
+rofi.color-active:                   #141414, #4b6292, #141414, #4b6292, #141414
+rofi.color-window:                   #141414, #363d4e, #252a35
 rofi.bw:                             5
 rofi.location:                       0
 rofi.padding:                        5
