--- a/i3/config
+++ b/i3/config
@@ -4,19 +4,19 @@
 
 set $mod Mod4
 set $term rxvt-unicode
-set $coloract "#363d4e"
-set $colorin "#252a35"
+set $coloract "#59739d"
+set $colorin "#3d4f6c"
 set_from_resource $fg i3wm.color7 #f0f0f0
 set_from_resource $bg i3wm.color0 #f0f0f0
-set_from_resource $color15 i3wm.color15 "#fefefe"
-set_from_resource $split i3wm.color10 "#747474"
-set_from_resource $coloru i3wm.color2 "#5c5c5c"
+set_from_resource $color15 i3wm.color15 "#fdecec"
+set_from_resource $split i3wm.color10 "#7090c5"
+set_from_resource $coloru i3wm.color2 "#63738e"
 set_from_resource $color1 i3wm.color2 #f0f0f0
-set_from_resource $color3 i3wm.color3 "#d1ad91"
-set_from_resource $color4 i3wm.color4 "#3e5c8b"
-set_from_resource $color5 i3wm.color5 "#3c4048"
-set_from_resource $color0 i3wm.color0 "#141414"
-set_from_resource $color8 i3wm.color8 "#282828"
+set_from_resource $color3 i3wm.color3 "#d49e89"
+set_from_resource $color4 i3wm.color4 "#42678f"
+set_from_resource $color5 i3wm.color5 "#978897"
+set_from_resource $color0 i3wm.color0 "#080c24"
+set_from_resource $color8 i3wm.color8 "#131a40"
 
 # class                 border  backgr. text indicator child_border
 client.focused          $color1     $bg     $fg  $color1       $color1
@@ -98,10 +98,10 @@ set $ws1  "  "
 set $ws2  "  "
 set $ws3  "  "
 set $ws4  "  "
-set $ws5  "  "
+set $ws5  " "
 set $ws6  "  "
 set $ws7  "  "
-set $ws8  "  "
+set $ws8  " "
 set $ws9  "  "
 set $ws10  "  "
 
@@ -261,16 +261,16 @@ bindsym $mod+c exec $term -e vim ~/config/i3/config
 bindsym $mod+x exec --no-startup-id ~/.scripts/dist_free_toggle.sh
 bindsym $mod+n exec $term -e ncmpcpp
 bindsym $mod+Shift+Return exec $term -e tmux
-bindsym $mod+Tab workspace next
+bindsym $mod+Tab workspace back_and_forth
 bindsym $mod+Shift+Tab workspace prev
-bindsym --release Print exec notify-send 'screenshot' 'please select area' && scrot -s ~/Pictures/printscreen/print_%d_%m_%Y_%T.png
-bindsym --release Shift+Print exec notify-send 'screenshot taken in ~/Pictures/printscreen/' && scrot ~/Pictures/printscreen/print_%d_%m_%Y_%T.png
+bindsym --release Print exec notify-send -t 1000 'screenshot' 'please select area' && scrot -s ~/Pictures/printscreen/print_%d_%m_%Y_%T.png
+bindsym --release Shift+Print exec notify-send -t 1000 'screenshot taken in ~/Pictures/printscreen/' && scrot ~/Pictures/printscreen/print_%d_%m_%Y_%T.png
 gaps inner 5
 gaps outer 5
 
 bar {
         i3bar_command i3bar
-        font pango:Fira Code 12
+        font pango:SauceCodePro Nerd Font Mono 15
         tray_padding 0
         position top
         status_command i3blocks
@@ -289,10 +289,10 @@ bar {
             }
         }
 
-exec --no-startup-id wal -R -a 85
-exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg 
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
 exec --no-startup-id nm-applet
 exec --no-startup-id pulseaudio --start
 exec --no-startup-id compton -bfcz
 exec --no-startup-id redshift
+exec --no-startup-id wal -R
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg
