--- a/i3/config
+++ b/i3/config
@@ -44,6 +44,8 @@ bindsym $mod+Return exec $term
 bindsym $mod+q kill
 
 bindsym $mod+Shift+f exec google-chrome
+bindsym $mod+Shift+V exec mpv $(find ~/Videos/Torrents/ | grep "\(mp4\)\|\(avi\)\|\(mkv\)" | rofi -dmenu)
+
 bindsym $mod+d exec rofi -bw 2 -yoffset -2 -sidebar-mode -show run -terminal rxvt-unicode
 # change focus
 bindsym $mod+h focus left
@@ -279,12 +281,12 @@ bar {
 
         colors {
             statusline         #9b999e96
-            background         #29334500
-            separator          #29334500
+            background         $bg
+            separator          $bg
 
             #                          BORDER       BACKGROUND   TEXT
-            focused_workspace  $color4 $color4 $color1
-            inactive_workspace #29334500 #29334500 $white
+            focused_workspace  $color0 $color0 $color1
+            inactive_workspace $bg $bg $white
             active_workspace   $transparent $transparent $color1
             urgent_workspace   #9b999e93     $color1     #29334595
             binding_mode       #29334500     $color1     #29334595
@@ -294,7 +296,7 @@ bar {
 exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
 exec --no-startup-id nm-applet
 exec --no-startup-id pulseaudio --start
-exec --no-startup-id compton -bfcz
+exec --no-startup-id compton -bfcCz
 exec --no-startup-id redshift
-exec --no-startup-id wal -R -a 85
-exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg
+exec --no-startup-id wal -R -a 97
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.png
