--- a/i3/config
+++ b/i3/config
@@ -3,7 +3,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-set $term rxvt-unicode
+set $term termite
 set $coloract "#afaa58"
 set $colorin "#78753c"
 set_from_resource $fg i3wm.color7 #f0f0f0
