--- a/i3/config
+++ b/i3/config
@@ -46,7 +46,7 @@ bindsym Mod1+q kill
 bindsym $mod+Shift+f exec google-chrome
 bindsym $mod+Shift+V exec mpv $(find ~/Videos/Torrents/ | grep "\(mp4\)\|\(avi\)\|\(mkv\)" | rofi -dmenu)
 
-bindsym $mod+d exec rofi -modi '' -show drun -matching fuzzy
+bindsym $mod+d exec rofi -show drun -matching fuzzy
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -275,7 +275,7 @@ workspace_auto_back_and_forth yes
 
 bar {
         i3bar_command i3bar -t
-        font pango:SauceCodePro Nerd Font Mono 14
+        font pango: SauceCodePro Nerd Font Mono 15
         tray_output none
         position top
         status_command i3blocks
