--- a/i3blocks/config
+++ b/i3blocks/config
@@ -1,6 +1,6 @@
 command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=0
-
+separator_block_width=-25
+full_text=' '
 # [spotinfo]
 # command=/usr/share/i3blocks/spotinfo -i "%artist - %title"
 # interval=10
