--- a/i3/config
+++ b/i3/config
@@ -3,8 +3,8 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-set $term rxvt-unicode
-set $browser firefox
+set $term termite
+set $browser google-chrome
 set_from_resource $fg i3wm.color7
 set_from_resource $bg i3wm.color0
 set_from_resource $color15 i3wm.color15
@@ -31,7 +31,7 @@ for_window [window_role="pop-up"] floating enable
 for_window [title="(?i)steam"] floating enable
 for_window [title="(?i)gsimplecal"] floating enable
 for_window [title="(?i)spotify"] floating enable, move to workspace $ws7
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 1
 new_window 1pixel
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -276,8 +276,8 @@ workspace_auto_back_and_forth yes
 
 bar {
         i3bar_command i3bar -t
-        font pango: SauceCodePro Nerd Font Mono 16
-        tray_output none
+        font pango: SauceCodePro Nerd Font Mono 12
+        # tray_output none
         position top
         status_command i3blocks
 
@@ -287,8 +287,8 @@ bar {
 
             #                          BORDER       BACKGROUND   TEXT
             focused_workspace  $color160 $color060 $color1
-            inactive_workspace $bg00 $bg00 $color395
-            active_workspace   $transparent $transparent $color1
+            inactive_workspace $bg60 $bg60 $color395
+            active_workspace   $color4 $bg60 $color1
             urgent_workspace   $color4     $color1     $color5
             binding_mode       $color4     $color1     $color5
             }
@@ -302,4 +302,4 @@ exec --no-startup-id redshift
 exec --no-startup-id xset r rate 150 40
 exec --no-startup-id wal -R -a 85
 exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.png
-border_radius 4
+# border_radius 4
