master: update de plugins e um scriptzin maroto

--- a/i3/config
+++ b/i3/config
@@ -277,7 +277,7 @@ workspace_auto_back_and_forth yes
 bar {
         i3bar_command i3bar -t
         font pango: SauceCodePro Nerd Font Mono 17
-        tray_output none
+        # tray_output none
         position top
         status_command i3blocks
 
@@ -286,8 +286,8 @@ bar {
             background         $bg60
 
             #                          BORDER       BACKGROUND   TEXT
-            focused_workspace  $color160 $color060 $color1
-            inactive_workspace $bg00 $bg00 $color395
+            focused_workspace  $color360 $bg60 $color3
+            inactive_workspace $bg60 $bg60 $color395
             active_workspace   $transparent $transparent $color1
             urgent_workspace   $color4     $color1     $color5
             binding_mode       $color4     $color1     $color5
@@ -301,4 +301,4 @@ exec --no-startup-id compton -bfz
 exec --no-startup-id redshift
 exec --no-startup-id xset r rate 150 40
 exec --no-startup-id wal -R -a 85
-exec --no-startup-id feh --bg-fill ~/Pictures/Wallpapers/wallpaper.png
+exec --no-startup-id feh --bg-fill ~/Pictures/wallpaper.png
